--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ name = "cookiecutter-pypackage"
 version = "1.1.1"
 description = "Cookiecutter template for a Python package"
 license = "BSD-3-Clause"
-authors = ["Xie Wei <ampedee@gmail.com>", "Luis C. Berrocal <luis.berrocal.1942@gmail.com>"]
+authors = ["Danielle Benesch <dbenesch@critias.ca>"]
 readme = "README.md"
 repository = "https://github.com/waynerv/cookiecutter-pypackage"
 documentation = "https://waynerv.github.io/cookiecutter-pypackage/"
