--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,8 @@ description = "Cookiecutter template for a Python package"
 license = "BSD-3-Clause"
 authors = ["Danielle Benesch <dbenesch@critias.ca>"]
 readme = "README.md"
-repository = "https://github.com/waynerv/cookiecutter-pypackage"
-documentation = "https://waynerv.github.io/cookiecutter-pypackage/"
+repository = "https://github.com/danibene/cookiecutter-pypackage"
+documentation = "https://danibene.github.io/cookiecutter-pypackage/"
 keywords = ['cookiecutter', 'template', 'package']
 
 include = [
