--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,9 @@ envlist = py39, docs
 skipsdist = true
 
 [gh-actions]
-python =
+python 
+    3.11: py311ß
+    3.10: py310
     3.9: py39
 
 [testenv:docs]
