--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,32 +18,27 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.9.0,<3.12"
-cookiecutter = "^1.7.2"
-click = "^8.1.3"
+python = ">=3.9,<3.12"
+rich = "^13.4.1"
+pydantic = "^1.10.4"
 
-[tool.poetry.group.dev.dependencies]
-pytest = "^7.2.0"
-pytest-cov = "^4.0.0"
-black = "^22.10.0"
-isort = "^5.10.1"
-mypy = "^0.991"
-flake8 = "^6.0.0"
-flake8-docstrings = "^1.6.0"
-factory-boy = "^3.2.1"
-pytz = "^2022.6"
-tox = "^3.27.1"
-pyyaml = "^6.0"
-pytest-cookies = "^0.6.1"
-
-
-[tool.poetry.group.doc.dependencies]
-mkdocs = "^1.4.2"
-mkdocs-include-markdown-plugin = "^4.0.0"
-mkdocs-material-extensions = "^1.1.1"
-mkdocs-material = "^8.5.11"
-mkdocstrings = "^0.19.0"
-mkdocs-autorefs = "^0.4.1"
+[tool.poetry.extras]
+dev = [
+  "pytest",
+  "pytest-cookies",
+  "isort",
+  "black",
+  "pyyaml",
+  "mkdocs",
+  "mkdocs-material",
+  "mkdocs-material-extensions",
+  "pytest-cov",
+  "tox",
+  "mkdocs-include-markdown-plugin",
+  "fire",
+  "mike",
+  "livereload"
+]
 
 [tool.black]
 line-length = 88
