--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -24,6 +24,7 @@ classifiers=[
 {%- endif %}
     'Natural Language :: English',
     'Programming Language :: Python :: 3',
+    'Programming Language :: Python :: 3.9',
     'Programming Language :: Python :: 3.10',
     'Programming Language :: Python :: 3.11',
 ]
@@ -33,39 +34,33 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.10,<3.12"
+python = ">=3.9,<3.12"
 {%- if cookiecutter.command_line_interface|lower == 'click' %}
 click = "^8.1.3"
 rich = "^13.4.1"
 {%- endif %}
 pydantic = "^1.10.4"
 
-[tool.poetry.group.dev.dependencies]
-pytest = "^7.4.0"
-black = "^23.7.0"
-isort = "^5.12.0"
-{%- if cookiecutter.use_mypy == 'y' %}
-mypy = "^1.4.1"
-{%- endif %}
-flake8 = "^6.0.0"
-flake8-docstrings = "^1.7.0"
-factory-boy = "^3.3.0"
-pytz = "^2023.3"
-bump2version = "^1.0.1"
-twine = "^4.0.2"
-coverage = "^7.2.7"
-tox = "^4.6.4"
-pytest-cov = "^4.1.0"
-pytest-mock = "^3.11.1"
-freezegun = "^1.2.2"
-
-
-[tool.poetry.group.doc.dependencies]
-mkdocs = "^1.4.2"
-mkdocs-include-markdown-plugin = "^3.9.1"
-mkdocs-material = "^8.5.10"
-mkdocstrings = "^0.19.0"
-mkdocs-autorefs = "^0.4.1"
+[tool.poetry.extras]
+dev = [
+  "pytest",
+  "pytest-cookies",
+  "isort",
+  "black",
+  "pyyaml",
+  "mkdocs",
+  "mkdocs-material",
+  "mkdocs-material-extensions",
+  "pytest-cov",
+  "tox",
+  "mkdocs-include-markdown-plugin",
+  "fire",
+  "mike",
+  {%- if cookiecutter.use_mypy == 'y' %}
+  "mypy",
+  {%- endif %}
+  "livereload"
+]
 
 {% if cookiecutter.command_line_interface|lower == 'click' -%}
 [tool.poetry.scripts]
