--- a/{{cookiecutter.project_slug}}/.github/workflows/release.yml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/release.yml
@@ -53,7 +53,7 @@ jobs:
 
       - name: build documentation
         run: |
-          poetry install -E doc
+          poetry install --with docs
           poetry run mkdocs build
 
       - name: publish documentation
